--- a/feature/src/main/AndroidManifest.xml
+++ b/feature/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity
             android:name=".MainActivity"
             android:icon="@drawable/maelstrom_symbol_no_background"
-            android:label="myScout"
+            android:label="FTC Rover Ruckus Scouting"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
